--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
